[Refactor] Remove legacy RuleDependencyGraph API, fully migrate to JGraphT